@@ -1,5 +1,5 @@
 -- | Parses the TIP format
-module Tip.Parser(parse,Id,idPos) where
+module Tip.Parser(parse,parseFile,Id,idPos) where
 
 import Data.Monoid
 
@@ -9,6 +9,15 @@ import Tip.Parser.ErrM
 
 import Tip.Parser.Convert
 import Tip.Core
+
+-- | Parse from a file. If the string is empty or "-", then reads from stdin.
+parseFile :: String -> IO (Either String (Theory Id))
+parseFile file =
+  do s <- case file of
+       ""  -> getContents
+       "-" -> getContents
+       _   -> readFile file
+     return (parse s)
 
 -- | Parse, and get either an error or the string's theory
 parse :: String -> Either String (Theory Id)
